@@ -66,18 +66,19 @@ VisibleString_constraint(asn1_TYPE_descriptor_t *td, const void *sptr,
 		for(; buf < end; buf++) {
 			if(!_VisibleString_alphabet[*buf]) {
 				_ASN_ERRLOG(app_errlog, app_key,
-					"%s: value byte %d "
-					"not in VisibleString alphabet (%d)",
+					"%s: value byte %d (%d) "
+					"not in VisibleString alphabet (%s:%d)",
 					td->name,
 					(buf - st->buf) + 1,
-					*buf
-				);
+					*buf,
+					__FILE__, __LINE__);
 				return -1;
 			}
 		}
 	} else {
 		_ASN_ERRLOG(app_errlog, app_key,
-			"%s: value not given", td->name);
+			"%s: value not given (%s:%d)",
+			td->name, __FILE__, __LINE__);
 		return -1;
 	}
 
