@@ -261,7 +261,8 @@ memb_IA5String_1_constraint(asn1_TYPE_descriptor_t *td, const void *sptr,
 	
 	if(!sptr) {
 		_ASN_ERRLOG(app_errlog, app_key,
-			"%s: value not given", td->name);
+			"%s: value not given (%s:%d)",
+			td->name, __FILE__, __LINE__);
 		return -1;
 	}
 	
@@ -271,7 +272,8 @@ memb_IA5String_1_constraint(asn1_TYPE_descriptor_t *td, const void *sptr,
 		return 0;
 	} else {
 		_ASN_ERRLOG(app_errlog, app_key,
-			"%s: constraint failed", td->name);
+			"%s: constraint failed (%s:%d)",
+			td->name, __FILE__, __LINE__);
 		return -1;
 	}
 }
